# girlfriend

./: .gitignore  Cargo.toml  README.md  empty.js  example.js  example.ts  license  readme.md
.github/workflows/: release.yml  test.yml
core/: Cargo.toml
core/src/: lib.rs  runtime.js
example/: core.js  runtime.js
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: engine.rs  lib.rs  main.rs  runtime.js  typescript.rs
src/file/: fetch.rs  mod.rs  read.rs  remove.rs  write.rs
src/polyfill/: core.js
src/shell/: cd.rs  ls.rs  mkdir.rs  mod.rs
