[package]
name = "girlfriend"
version = "0.2.0"
edition = "2021"
homepage = "https://uwussi.moe"
repository = "https://github.com/uwussimo/girlfriend"
description = "Javascript for shell scripting"
authors = ["UwUssimo Robinson <uwussimo@icloud.com> (https://uwussi.moe)"]
keywords = ["girlfriend", "javascript", "shell", "scripting"]
readme = "readme.md"
categories = ["emulators", "simulation"]
license = "MIT"
exclude = ["target", ".github"]

[dependencies]
clap = "3.1.18"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
deno_runtime = "0.71.0"
deno_core = "0.145.0"
core = { version = "0.1.0", path = "./core" }
runtime = { version = "0.1.0", path = "./runtime" }