[package]
name = "girlfriend"
version = "0.3.1"
edition = "2021"
homepage = "https://github.com/phoenixifier/girlfriend"
repository = "https://github.com/phoenixifier/girlfriend"
description = "JavaScript for your Shell"
authors = ["Cybeast Falzar"]
keywords = ["shell", "javascript"]
readme = "readme.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
deno_ast = { version = "0.22.0", features = ["transpiling"] }
deno_core = "0.174.0"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1