[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.145.0"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
